@@ -1,3 +1,8 @@
+2010-06-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* fsvn-browse.el (fsvn-browse-prefix-map): fsvn-browse-update-path bound to C-c C-u
+	(fsvn-browse-mode-map): Make prefix map to `z'. Fix violating keymap conventions.
+
 2010-06-07  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* MAKE-TARGETS.mk (archive): Compress single-file
